--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.ui_design">
    <application
-        android:label="ui_design"
+        android:label="Liqueous"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
